--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!doctype html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <meta name="description" content="COPYBETPRO - Sistema de Trading Profissional para Betfair. Gerencie suas estratégias, configure stakes e automatize seu trading." />
-    <meta name="theme-color" content="#6366f1" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/sigatrader-icon.svg" />
-    <title>COPYBETPRO - Sistema de Trading Profissional</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
+  <!-- Fonts: Satoshi (Display) + DM Sans (UI) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&display=swap"
+    rel="stylesheet">
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@700,800,900&display=swap" rel="stylesheet">
+
+  <meta name="description"
+    content="COPYBETPRO — Sistema de Trading Profissional. Copie estratégias de traders profissionais na Betfair com automação inteligente." />
+  <meta name="theme-color" content="#0B1120" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" href="/sigatrader-icon.svg" />
+  <title>COPYBETPRO — Trading Profissional</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
